--- a/cloud-storage-client/src/main/resources/com/geekbrains/layout.fxml
+++ b/cloud-storage-client/src/main/resources/com/geekbrains/layout.fxml
@@ -41,8 +41,9 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
 
-<VBox fx:controller="com.geekbrains.MainController"
+<VBox fx:controller="com.geekbrains.ClientController"
       prefHeight="400.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1">
+
     <MenuBar VBox.vgrow="NEVER">
         <Menu mnemonicParsing="false" text="File">
             <MenuItem mnemonicParsing="false" text="Quit"/>
@@ -58,6 +59,7 @@
             <MenuItem mnemonicParsing="false" text="About"/>
         </Menu>
     </MenuBar>
+
     <AnchorPane VBox.vgrow="ALWAYS">
         <ListView fx:id="clientView" onMouseClicked="#clientSelectedItem" layoutX="14.0" layoutY="30.0" prefHeight="297.0" prefWidth="271.0"/>
         <ListView fx:id="serverView" layoutX="355.0" layoutY="30.0" prefHeight="297.0" prefWidth="271.0"/>
