--- a/cloud-storage-client/src/main/resources/com/geekbrains/layout.fxml
+++ b/cloud-storage-client/src/main/resources/com/geekbrains/layout.fxml
@@ -41,38 +41,33 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
 
-<VBox fx:controller="com.geekbrains.ClientController"
-      prefHeight="400.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1">
+<VBox prefHeight="400.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.geekbrains.ClientController">
 
     <MenuBar VBox.vgrow="NEVER">
         <Menu mnemonicParsing="false" text="File">
-            <MenuItem mnemonicParsing="false" text="Quit"/>
+            <MenuItem mnemonicParsing="false" text="Quit" />
         </Menu>
         <Menu mnemonicParsing="false" text="Edit">
-            <MenuItem mnemonicParsing="false" text="Cut"/>
-            <MenuItem mnemonicParsing="false" text="Copy"/>
-            <MenuItem mnemonicParsing="false" text="Paste"/>
-            <MenuItem mnemonicParsing="false" text="Delete"/>
-            <MenuItem mnemonicParsing="false" text="Rename"/>
+            <MenuItem mnemonicParsing="false" text="Cut" />
+            <MenuItem mnemonicParsing="false" text="Copy" />
+            <MenuItem mnemonicParsing="false" text="Paste" />
+            <MenuItem mnemonicParsing="false" text="Delete" />
+            <MenuItem mnemonicParsing="false" text="Rename" />
         </Menu>
         <Menu mnemonicParsing="false" text="Help">
-            <MenuItem mnemonicParsing="false" text="About"/>
+            <MenuItem mnemonicParsing="false" text="About" />
         </Menu>
     </MenuBar>
 
     <AnchorPane VBox.vgrow="ALWAYS">
-        <ListView fx:id="clientView" onMouseClicked="#clientSelectedItem" layoutX="14.0" layoutY="30.0" prefHeight="297.0" prefWidth="271.0"/>
-        <ListView fx:id="serverView" layoutX="355.0" layoutY="30.0" prefHeight="297.0" prefWidth="271.0"/>
-        <Button layoutX="293.0" layoutY="105.0" mnemonicParsing="false" prefHeight="55.0" prefWidth="55.0"
-                text="Add"/>
-        <Button layoutX="293.0" layoutY="150.0" mnemonicParsing="false" prefHeight="55.0" prefWidth="55.0"
-                text="Delete"/>
-        <TextField fx:id="input" onAction="#sendMessage" layoutX="14.0" layoutY="337.0" prefHeight="27.0" prefWidth="612.0"/>
-        <TextField layoutX="14.0" layoutY="3.0" prefHeight="27.0" prefWidth="271.0"/>
-        <TextField layoutX="355.0" layoutY="3.0" prefHeight="27.0" prefWidth="271.0"/>
-        <Button layoutX="253.0" layoutY="3.0" mnemonicParsing="false" prefHeight="27.0" prefWidth="32.0"
-                text="..."/>
-        <Button layoutX="594.0" layoutY="3.0" mnemonicParsing="false" prefHeight="27.0" prefWidth="32.0"
-                text="..."/>
+        <ListView fx:id="clientView" layoutX="14.0" layoutY="30.0" onMouseClicked="#clientSelectedItem" prefHeight="297.0" prefWidth="271.0" />
+        <ListView fx:id="serverView" layoutX="355.0" layoutY="30.0" prefHeight="297.0" prefWidth="271.0" />
+        <Button layoutX="288.0" layoutY="105.0" mnemonicParsing="false" onAction="#addFile" prefHeight="40.0" prefWidth="65.0" text="Add -&gt;" />
+        <Button layoutX="285.0" layoutY="159.0" mnemonicParsing="false" onAction="#deleteFile" prefHeight="40.0" prefWidth="70.0" text="&lt;- Delete" />
+        <TextField fx:id="input" layoutX="14.0" layoutY="337.0" onAction="#sendMessage" prefHeight="27.0" prefWidth="612.0" />
+        <TextField layoutX="14.0" layoutY="3.0" prefHeight="27.0" prefWidth="271.0" />
+        <TextField layoutX="355.0" layoutY="3.0" prefHeight="27.0" prefWidth="271.0" />
+        <Button layoutX="253.0" layoutY="3.0" mnemonicParsing="false" prefHeight="27.0" prefWidth="32.0" text="..." />
+        <Button layoutX="594.0" layoutY="3.0" mnemonicParsing="false" prefHeight="27.0" prefWidth="32.0" text="..." />
     </AnchorPane>
 </VBox>
