--- a/cloud-storage-client/src/main/resources/com/geekbrains/client.fxml
+++ b/cloud-storage-client/src/main/resources/com/geekbrains/client.fxml
@@ -45,14 +45,14 @@
             <cursor>
                 <Cursor fx:constant="DEFAULT" />
             </cursor>
-            <TreeView layoutX="-8.0" prefHeight="418.0" prefWidth="200.0">
+            <TreeView fx:id="clientTreeView" layoutX="-8.0" prefHeight="418.0" prefWidth="200.0">
                 <opaqueInsets>
                     <Insets />
                 </opaqueInsets>
             </TreeView>
         </AnchorPane>
         <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
-            <ListView prefHeight="420.0" prefWidth="440.0" />
+            <ListView fx:id="clientListView" prefHeight="420.0" prefWidth="440.0" />
         </AnchorPane>
     </SplitPane>
 </VBox>
