--- a/cloud-storage-client/src/main/resources/com/geekbrains/layout.fxml
+++ b/cloud-storage-client/src/main/resources/com/geekbrains/layout.fxml
@@ -30,7 +30,7 @@
     </MenuBar>
 
     <AnchorPane VBox.vgrow="ALWAYS">
-        <ListView fx:id="clientView" layoutX="14.0" layoutY="30.0" onMouseClicked="#clientSelectedItem" prefHeight="297.0" prefWidth="271.0" />
+        <ListView fx:id="clientListView" layoutX="14.0" layoutY="30.0" onMouseClicked="#clientSelectedItem" prefHeight="297.0" prefWidth="271.0" />
         <ListView fx:id="serverView" layoutX="355.0" layoutY="30.0" prefHeight="297.0" prefWidth="271.0" />
         <Button layoutX="288.0" layoutY="105.0" mnemonicParsing="false" onAction="#addFile" prefHeight="40.0" prefWidth="65.0" text="Add -&gt;" />
         <Button layoutX="285.0" layoutY="159.0" mnemonicParsing="false" onAction="#deleteFile" prefHeight="40.0" prefWidth="70.0" text="&lt;- Delete" />
