--- a/cloud-storage-client/src/main/resources/com/geekbrains/client.fxml
+++ b/cloud-storage-client/src/main/resources/com/geekbrains/client.fxml
@@ -1,20 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.Cursor?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ListView?>
-<?import javafx.scene.control.Menu?>
-<?import javafx.scene.control.MenuBar?>
-<?import javafx.scene.control.MenuItem?>
-<?import javafx.scene.control.SeparatorMenuItem?>
-<?import javafx.scene.control.SplitPane?>
-<?import javafx.scene.control.ToolBar?>
-<?import javafx.scene.control.TreeView?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.VBox?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
 
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="480.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.geekbrains.ClientController">
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="480.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/11.0.2" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.geekbrains.ClientController">
     <MenuBar VBox.vgrow="NEVER">
         <Menu mnemonicParsing="false" text="File">
             <MenuItem fx:id="connect" mnemonicParsing="false" onAction="#connect" text="Connect..." />
@@ -38,21 +29,24 @@
         </Menu>
     </MenuBar>
     <ToolBar prefHeight="40.0" prefWidth="200.0">
-        <Button mnemonicParsing="false" text="Button" />
+        <Button mnemonicParsing="false" text="Обновить" />
+        <Button layoutX="10.0" layoutY="10.0" mnemonicParsing="false" onAction="#createDirectory" text="Создать папку" />
+        <Button layoutX="85.0" layoutY="10.0" mnemonicParsing="false" text="Загрузить" />
+        <Button layoutX="184.0" layoutY="10.0" mnemonicParsing="false" text="Скачать" />
     </ToolBar>
-    <SplitPane dividerPositions="0.3056426332288401" prefHeight="456.0" prefWidth="640.0">
-        <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0" VBox.vgrow="ALWAYS">
+    <SplitPane fx:id="splitPane" dividerPositions="0.3056426332288401" prefHeight="456.0" prefWidth="640.0" VBox.vgrow="ALWAYS">
+        <HBox fx:id="treeViewBox" minHeight="0.0" prefHeight="450.0" prefWidth="192.0" VBox.vgrow="ALWAYS">
             <cursor>
                 <Cursor fx:constant="DEFAULT" />
             </cursor>
-            <TreeView fx:id="clientTreeView" layoutX="-8.0" prefHeight="418.0" prefWidth="200.0">
+            <TreeView fx:id="clientTreeView" prefHeight="418.0" prefWidth="200.0" HBox.hgrow="ALWAYS" VBox.vgrow="ALWAYS">
                 <opaqueInsets>
                     <Insets />
                 </opaqueInsets>
             </TreeView>
-        </AnchorPane>
-        <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
-            <ListView fx:id="clientListView" prefHeight="420.0" prefWidth="440.0" />
-        </AnchorPane>
+        </HBox>
+        <HBox fx:id="listViewBox" minHeight="0.0" prefHeight="160.0" prefWidth="100.0" VBox.vgrow="ALWAYS">
+            <ListView fx:id="clientListView" prefHeight="420.0" prefWidth="440.0" HBox.hgrow="ALWAYS" VBox.vgrow="ALWAYS" />
+        </HBox>
     </SplitPane>
 </VBox>
