--- a/cloud-storage-client/src/main/resources/com/geekbrains/client.fxml
+++ b/cloud-storage-client/src/main/resources/com/geekbrains/client.fxml
@@ -29,7 +29,7 @@
         </Menu>
     </MenuBar>
     <ToolBar prefHeight="40.0" prefWidth="200.0">
-        <Button mnemonicParsing="false" text="Обновить" />
+        <Button mnemonicParsing="false" text="Обновить" onAction="#reload" />
         <Button layoutX="10.0" layoutY="10.0" mnemonicParsing="false" onAction="#createDirectory" text="Создать папку" />
         <Button layoutX="85.0" layoutY="10.0" mnemonicParsing="false" text="Загрузить" />
         <Button layoutX="184.0" layoutY="10.0" mnemonicParsing="false" text="Скачать" />
@@ -39,8 +39,7 @@
             <cursor>
                 <Cursor fx:constant="DEFAULT" />
             </cursor>
-            <TreeView fx:id="clientTreeView" prefHeight="418.0" prefWidth="200.0" HBox.hgrow="ALWAYS" VBox.vgrow="ALWAYS"
-                      onMouseClicked="#openDirectory">
+            <TreeView fx:id="clientTreeView" prefHeight="418.0" prefWidth="200.0" HBox.hgrow="ALWAYS" VBox.vgrow="ALWAYS">
                 <opaqueInsets>
                     <Insets />
                 </opaqueInsets>
